# rust-http-server

./: Cargo.toml
src/: main.rs  restbasics.rs  singleroute.rs
