[package]
name = "solana_http_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde_json = "1.0.140"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing-subscriber = "0.3.19"
