[package]
name = "solana_http_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.4"
base64 = "0.21"
ed25519-dalek = "2.1.1"
rand_core = "0.6.4"
rand = "0.8"
solana-sdk = "1.16.14"
spl-token = "3.5.0"
spl-associated-token-account = "1.0.2"

